2003-05-01  David Hyatt  <hyatt@apple.com>

	Table rows don't know their precise dimensions, so repainting
	them fails.  For now, just make an invalidation of a table
	row due to CSS changes invalidate the whole table.

	This is what the old Safari table code used to do prior to the
	new table code landing.

	Fixes bug #3205092.
	
        Reviewed by darin/john

        * khtml/rendering/render_table.cpp:
        (RenderTableRow::repaint):
        * khtml/rendering/render_table.h:

2003-05-01  David Hyatt  <hyatt@apple.com>

	Fix for 3232637, don't let generated parentless image content
	try to do width/height/layout calculations.  It will do this
	all anyway, when it finally gets inserted into the rendering
	tree.
	
        Reviewed by john

        * khtml/rendering/render_image.cpp:
        (RenderImage::setPixmap):

2003-05-01  David Hyatt  <hyatt@apple.com>

	Fix for 3239404, a crash caused because a block-level :after
	element was being inserted as generated content inside an
	inline element.

	The fix is to mutate the display of the generated content to
	be inline when the parent of the generated content is also
	inline. 

	Section 12.1 of the CSS2 spec (at the very end of the spec)
	covers this special case.  Once we do the mutation it becomes
	impossible for generated content to cause a splitFlow, and so
	the crash is plugged.
	
        Reviewed by john

        * khtml/rendering/render_container.cpp:
        (RenderContainer::insertPseudoChild):

2003-05-01  David Hyatt  <hyatt@apple.com>

	Replace effectiveWidth and effectiveHeight with a 
	parameterized overflowWidth/Height, since this is much better
	terminology.

	Also fix event handling so that it no longer assumes (incorrectly)
	that being inside the overflow rect of an object means you are
	inside the object.  Now there are two separate checks, with the
	overflow check being used only to figure out if you should check
	inside your kids.
	
        Reviewed by darin
