@@ -1,5 +1,15 @@
 2003-05-01  David Hyatt  <hyatt@apple.com>
 
+	Add a cycle check when importing stylesheets to prevent
+	infinite loops.
+	
+        Reviewed by john
+
+        * khtml/css/css_ruleimpl.cpp:
+        (CSSImportRuleImpl::init):
+
+2003-05-01  David Hyatt  <hyatt@apple.com>
+
 	Table rows don't know their precise dimensions, so repainting
 	them fails.  For now, just make an invalidation of a table
 	row due to CSS changes invalidate the whole table.
